--- a/card.html
+++ b/card.html
@@ -51,21 +51,24 @@
 				<p>Работаем с понедельника по пятницу с 9:00 до 18:45</p>
 				<form action="" method="POST">
 					<div class="form__group">
-						<label class="control-body" for="name2">
+						<div class="float-container">
 							<input class="control" type="text" name="name2" id="name2" placeholder="Ваше имя" />
-						</label>
+							<label for="name2">Ваше имя</label><span>необязательно</span>
+						</div>
 					</div>
 					<div class="form__group">
-						<label class="control-body" for="email2">
+						<div class="float-container">
 							<input class="control" type="text" name="email2" id="email2" placeholder="Почта" />
-						</label>
+							<label for="email2">Почта</label><span>необязательно</span>
+						</div>
 					</div>
 					<div class="form__group">
-						<label class="control-body" for="phone2">
-							<input class="control" type="text" name="phone" id="phone2" placeholder="Ваш телефон" required="required" />
-						</label>
+						<div class="float-container">
+							<input class="control" type="text" name="phone" id="phone6" placeholder="Ваш телефон" required="required" />
+							<label for="phone6">Ваш телефон</label>
+						</div>
 					</div>
-					<button class="btn btn--outlined form__group btn--full" type="submit">Оставить заявку на образец</button>
+					<button class="btn btn--outlined form__group btn--full" type="submit"><span>Оставить заявку на образец</span></button>
 					<div class="radio">
 						<input type="radio" id="sign1" name="sign" />
 						<label class="label" for="sign1"><span>Согласен на обработку персональных данных в соответствии с <a href>политикой конфиденциальности</a></span></label>
@@ -80,7 +83,7 @@
 					<div class="kit">
 						<div class="kit__item">
 							<p class="text--grey text__sm">Подарочный набор</p>
-							<h4>Внимательность</h4>
+							<h5>Внимательность</h5>
 						</div>
 						<div class="kit__item">
 							<p class="text__lg">670 ₽</p>
@@ -138,21 +141,24 @@
 						</div>
 					</div>
 					<div class="form__group">
-						<label class="control-body" for="name3">
+						<div class="float-container">
 							<input class="control" type="text" name="name3" id="name3" placeholder="Ваше имя" />
-						</label>
+							<label for="name3">Ваше имя</label><span>необязательно</span>
+						</div>
 					</div>
 					<div class="form__group">
-						<label class="control-body" for="email3">
+						<div class="float-container">
 							<input class="control" type="text" name="email3" id="email3" placeholder="Почта" />
-						</label>
+							<label for="email3">Почта</label><span>необязательно</span>
+						</div>
 					</div>
 					<div class="form__group">
-						<label class="control-body" for="phone3">
-							<input class="control" type="text" name="phone" id="phone3" placeholder="Ваш телефон" required="required" />
-						</label>
+						<div class="float-container">
+							<input class="control" type="text" name="phone" id="phone5" placeholder="Ваш телефон" required="required" />
+							<label for="phone5">Ваш телефон</label>
+						</div>
 					</div>
-					<button class="btn btn--outlined form__group btn--full" type="submit">Оставить заявку на образец</button>
+					<button class="btn btn--outlined form__group btn--full" type="submit"><span>Оставить заявку на образец</span></button>
 					<div class="radio">
 						<input type="radio" id="sign2" name="sign" />
 						<label class="label" for="sign2"><span>Согласен на обработку персональных данных в соответствии с <a href>политикой конфиденциальности</a></span></label>
@@ -202,7 +208,7 @@
 							<li>1 сорт чая / 1 унция в емкости</li>
 							<li>Тростниковый сахар / 100 гр.</li>
 							<li>Коробка «Классика»</li>
-						</ul><a class="btn btn--info" href="#">Оставить заявку на образец</a><a href="#">Перейти к карточке подарка<img src="assets/images/icons/next.svg" alt="" /></a>
+						</ul><a class="btn btn--primary" href="#"><span>Оставить заявку на образец</span></a><a href="#">Перейти к карточке подарка<img src="assets/images/icons/next.svg" alt="" /></a>
 					</div>
 				</div>
 			</div>
@@ -243,11 +249,11 @@
 								<p>Срок сборки</p>
 								<h4>8 дней</h4>
 							</div>
-							<div class="col col__xs-6">
+							<div class="col col__md-8 col__xs-6">
 								<p>Объем партии</p>
 								<h4>58 подарков</h4>
 							</div>
-						</div><a class="linkDots" href="#">Благодарственное письмо</a><a class="btn btn--info" href="#">Оставить заявку на образец</a>
+						</div><a class="linkDots" href="#">Благодарственное письмо</a><a class="btn btn--primary" href="#"><span>Оставить заявку на подбор подарка</span></a>
 					</div>
 				</div>
 			</div>
@@ -256,19 +262,16 @@
 					<div class="searchBar__close"><img src="assets/images/icons/close.svg" alt="" />
 					</div>
 					<form class="searchBar__input" method="POST">
-						<label class="control-body" for="search">
+						<div class="float-container">
 							<input class="control" type="text" name="search" id="search" placeholder="Что вы хотите найти?" required="required" />
-						</label>
-						<button type="submit"><img src="assets/images/icons/search.svg" alt="" />
-						</button>
+							<label for="search">Что вы хотите найти?</label>
+						</div>
+						<button type="submit"><i class="icon-search"></i></button>
 					</form>
 				</div>
 			</div>
 			<header class="header"><a class="header__logo" href="/"><img src="assets/images/logo.svg" alt="" /></a>
-				<nav class="navbar">
-					<div class="main-nav__toggle">
-						<div class="main-nav__toggle--js">1</div>
-					</div>
+				<nav class="navbar col__lg-6">
 					<div class="main-nav__collapse">
 						<ul class="header__menu">
 							<li class="header__menu-el"><a class="header__menu__item" href="/" title="Каталог подарков">Каталог подарков</a>
@@ -278,21 +281,28 @@
 							<li class="header__menu-el"><a class="header__menu__item" href="" title="Контакты">Контакты</a>
 							</li>
 						</ul>
+						<div class="visible__sm visible__xs">
+							<div class="header__phone"><a href="tel:88005057562">8 800 505-75-62</a></div>
+							<div class="header__btn"><a class="btn btn--outlined btn--sm popup-modal popup-with-zoom-anim" href="#call"><span>получить предложение</span></a></div>
+						</div>
 					</div>
 				</nav>
-				<div class="header__phone"><a href="tel:88005057562">8 800 505-75-62</a></div>
-				<div class="header__search search--js"><a class="header__right__but" href=""><img src="assets/images/icons/search.svg" alt="" /></a></div>
-				<div class="header__btn hidden__xs hidden__sm"><a class="btn btn--outlined popup-modal popup-with-zoom-anim" href="#call">получить предложение</a></div>
+				<div class="header__phone hidden__sm hidden__xs"><a href="tel:88005057562">8 800 505-75-62</a></div>
+				<div class="header__search search--close"><img src="assets/images/icons/close.svg" alt="" />
+				</div>
+				<div class="header__search search--js"><a class="header__right__but" href=""><i class="icon-search"></i></a></div>
+				<div class="main-nav__toggle visible__xs visible__sm">
+					<div class="main-nav__toggle--js"><span></span><span></span></div>
+				</div>
+				<div class="header__btn hidden__xs hidden__sm"><a class="btn btn--outlined popup-modal popup-with-zoom-anim" href="#call"><span>получить предложение</span></a></div>
 			</header>
 			<main class="page index">
 				<section class="cardBack">
-					<div class="container"><a class="textIcon text__md" href="#"><img src="assets/images/icons/prev.svg" alt="" /><span class="text__md">Вернуться в каталог</span></a>
+					<div class="container"><a class="textIcon" href="#"><img src="assets/images/icons/prev.svg" alt="" /><span class="text__sm">Вернуться в каталог</span></a>
 						<div class="card">
 							<div class="card__left">
-								<div class="slick-prev slick-prev--ca"><img src="assets/images/icons/left-arrow.svg" alt="" />
-								</div>
-								<div class="slick-next slick-next--ca"><img src="assets/images/icons/right-arrow.svg" alt="" />
-								</div>
+								<div class="slick-prev slick-prev--ca"><i class="icon-left-arrow"></i></div>
+								<div class="slick-next slick-next--ca"><i class="icon-right-arrow"></i></div>
 								<div class="slider-for">
 									<div><img src="assets/images/card/card.png" alt="" />
 									</div>
@@ -329,8 +339,8 @@
 									<div class="card-price">670 ₽</div>
 								</div>
 								<h4>Понравился подарок?</h4>
-								<p>Оставьте заявку. Мы с вами свяжемся <br /> и договримся, куда отправить пробники.</p><a class="btn btn--info popup-modal popup-with-zoom-anim" href="#card">Оставить заявку на образец</a>
-								<h4>Чтобы рассчитать сроки сборки <br /> и примерную стоимость, можете <br /> использовать наш калькулятор</h4><a class="btn btn--outlined" href="#"><i class="sprite--calc"></i>Рассчитать стоимость партии подарков</a>
+								<p>Оставьте заявку. Мы с вами свяжемся <br /> и договримся, куда отправить пробники.</p><a class="btn btn--primary popup-modal popup-with-zoom-anim" href="#card"><span>Оставить заявку на образец</span></a>
+								<h4>Чтобы рассчитать сроки сборки <br /> и примерную стоимость, можете <br /> использовать наш калькулятор</h4><a class="btn btn--outlined popup-modal popup-with-zoom-anim" href="#product"><i class="sprite--calc"></i><span>Рассчитать стоимость партии подарков</span></a>
 							</div>
 						</div>
 					</div>
@@ -359,7 +369,7 @@
 					<section class="mainCatalog">
 						<div class="title">
 							<h3>Подарки, которые могут вам понравиться</h3>
-							<div class="slider-nav">
+							<div class="slider-nav hidden__sm hidden__xs">
 								<div class="slick-prev slick-prev--ct"><i class="sprite--prev"></i></div>
 								<div class="slick-next slick-next--ct"><i class="sprite--next"></i></div>
 							</div>
@@ -369,49 +379,49 @@
 								<div class="products__item-img"><img src="assets/images/prod-1.png" /></div>
 								<div class="products__item-title">Рождественская посылка</div>
 								<div class="products__item-price">670 ₽</div>
-								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card">Заказать подарок</a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
+								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
 							</div>
 							<div class="products__item">
 								<div class="products__item-img"><img src="assets/images/prod-2.png" /></div>
 								<div class="products__item-title">Вечер на льду</div>
 								<div class="products__item-price">670 ₽</div>
-								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card">Заказать подарок</a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
+								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
 							</div>
 							<div class="products__item">
 								<div class="products__item-img"><img src="assets/images/prod-3.png" /></div>
 								<div class="products__item-title">Посылка камин</div>
 								<div class="products__item-price">670 ₽</div>
-								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card">Заказать подарок</a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
+								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
 							</div>
 							<div class="products__item">
 								<div class="products__item-img"><img src="assets/images/prod-4.png" /></div>
 								<div class="products__item-title">Встреча</div>
 								<div class="products__item-price">670 ₽</div>
-								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card">Заказать подарок</a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
+								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
 							</div>
 							<div class="products__item">
 								<div class="products__item-img"><img src="assets/images/prod-5.png" /></div>
 								<div class="products__item-title">Золотой узор</div>
 								<div class="products__item-price">670 ₽</div>
-								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card">Заказать подарок</a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
+								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
 							</div>
 							<div class="products__item">
 								<div class="products__item-img"><img src="assets/images/prod-6.png" /></div>
 								<div class="products__item-title">Зимняя сказка</div>
 								<div class="products__item-price">670 ₽</div>
-								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card">Заказать подарок</a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
+								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
 							</div>
 							<div class="products__item">
 								<div class="products__item-img"><img src="assets/images/prod-7.png" /></div>
 								<div class="products__item-title">Внимательность</div>
 								<div class="products__item-price">670 ₽</div>
-								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card">Заказать подарок</a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
+								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
 							</div>
 							<div class="products__item">
 								<div class="products__item-img"><img src="assets/images/prod-8.png" /></div>
 								<div class="products__item-title">Биг-Бен</div>
 								<div class="products__item-price">670 ₽</div>
-								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card">Заказать подарок</a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
+								<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#keys">Что внутри?</a></div>
 							</div>
 						</div>
 					</section>
@@ -419,7 +429,7 @@
 						<div class="cardOrder__left">
 							<h3>Соберем под ваш бюджет</h3>
 							<p class="text__lg">У вас ограничен бюджет и нужно собрать фиксированное число подарков?</p>
-							<p class="text__lg">Оставьте заявку и мы подберем оптимальную комплектацию и количество подарков под ваш бюджет.</p><a class="btn btn--info" href="#">Оставить заявку на подбор</a>
+							<p class="text__lg">Оставьте заявку и мы подберем оптимальную комплектацию и количество подарков под ваш бюджет.</p><a class="btn btn--primary" href="#"><span>Оставить заявку на подбор</span></a>
 						</div>
 						<div class="cardOrder__right"><img src="assets/images/card/order.jpg" alt="" />
 						</div>
@@ -429,10 +439,10 @@
 			<footer class="footer">
 				<div class="container"><a class="footer__logo" href="/"><img src="assets/images/logo.svg" alt="" /></a><a class="footer__copy" href="#">© 2019 Унция. Все права защищены.</a>
 					<ul class="footer__social">
-						<li><a href="#"><img src="assets/images/icons/vk.svg" alt="" /></a></li>
-						<li><a href="#"><img src="assets/images/icons/instagram.svg" alt="" /></a></li>
-						<li><a href="#"><img src="assets/images/icons/fb.svg" alt="" /></a></li>
-					</ul><a href="#"><img src="assets/images/cloudmill.svg" alt="" /></a>
+						<li><a href="#"><i class="icon-vk"></i></a></li>
+						<li><a href="#"><i class="icon-instagram"></i></a></li>
+						<li><a href="#"><i class="icon-fb"></i></a></li>
+					</ul><a class="footer__cloud" href="https://www.cloudmill.ru" target="_blank"><img src="assets/images/cloudmill.svg" alt="" /></a>
 				</div>
 			</footer>
 		</div>
