--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 			<main class="page index">
 				<section class="mainSlider">
 					<div class="linkInner"><a class="textIcon" href="https://www.chay.info/" target="_blank"><img src="assets/images/icons/prev.svg" alt="" /><span class="text__sm">На основной сайт</span></a></div>
-					<div class="mainSlider-img"><img src="assets/images/leaf.png" alt="" />
+					<div class="mainSlider-img rellax"><img src="assets/images/leaf.png" alt="" />
 					</div>
 					<div class="mainSlider-nav">
 						<div class="slick-prev slick-prev--ma"></div>
@@ -817,7 +817,7 @@
 								<div class="showText showText--js">раскрыть</div>
 							</div>
 							<div class="col col__lg-8 col__md-6 col__xs-12 hidden__sm hidden__xs">
-								<div class="mainPresents-img" data-aos="fade-up"><img src="assets/images/presents.png" alt="" />
+								<div class="mainPresents-img rellax" data-aos="fade-up"><img src="assets/images/presents.png" alt="" />
 								</div>
 							</div>
 						</div>
@@ -853,7 +853,7 @@
 					</section>
 				</div>
 				<section class="mainForm">
-					<div class="mainFormImg" data-aos="fade-up"><img src="assets/images/formImg.png" alt="" />
+					<div class="mainFormImg rellax" data-aos="fade-up"><img src="assets/images/formImg.png" alt="" />
 					</div>
 					<div class="container">
 						<div class="col__xl-10 centered-block">
@@ -928,7 +928,7 @@
 				<section class="mainDesign" id="howto">
 					<div class="container">
 						<div class="title" data-aos="fade-up">
-							<h2 class="paroller">Создайте индивидуальные <br /> подарки. Выберите:</h2><img src="assets/images/boxes.svg" alt="" />
+							<h2 class="paroller">Создайте индивидуальные <br /> подарки. Выберите:</h2><img class="rellax" src="assets/images/boxes.svg" />
 						</div>
 						<div class="tabs tabs--main">
 							<div class="tabs-list" data-aos="fade-up"><a class="tab active" href="#tab1">Упаковку</a><a class="tab" href="#tab2">Состав</a><a class="tab" href="#tab3">Куда нанести логотип</a>
@@ -1389,7 +1389,9 @@
 				</section>
 				<section class="mainClients">
 					<div class="row between__xs">
-						<div class="col col__lg-5 col__md-6 col__xs-12 hidden__xs hidden__sm" data-aos="fade-up"><img src="assets/images/presents1.jpg" alt="" />
+						<div class="col col__lg-5 col__md-6 col__xs-12 hidden__xs hidden__sm" data-aos="fade-up">
+							<div class="rellax" data-rellax-wrapper=".mainClients"><img src="assets/images/presents1.jpg" alt="" />
+							</div>
 						</div>
 						<div class="col col__md-6 col__xs-12 relative" data-aos="fade-up">
 							<h2>C нами работают</h2>
@@ -1456,6 +1458,10 @@
 					</div>
 				</section>
 				<section class="mainHowTo">
+					<div class="mainHowTo-imgLeft rellax"><img src="assets/images/howToBack1.png" alt="" />
+					</div>
+					<div class="mainHowTo-imgRight rellax"><img src="assets/images/howToBack2.png" alt="" />
+					</div>
 					<div class="container">
 						<div class="text--center" data-aos="fade-up">
 							<h2>Как мы работаем</h2>
@@ -1507,8 +1513,10 @@
 						</div>
 					</div>
 				</section>
-				<section class="mainContact" id="contacts">
-					<div class="container">
+				<section class="mainContact">
+					<div class="mainContact-img rellax"><img src="assets/images/contactImg.png" alt="" />
+					</div>
+					<div class="container" id="contacts">
 						<div class="centered-block col__xl-8 col__lg-9 col__md-10">
 							<h2 data-aos="fade-up">Работаем <br /> по всей России</h2>
 							<div class="row between__xs" data-aos="fade-up">
@@ -1559,7 +1567,9 @@
 						<div class="centered-block col__lg-9">
 							<div class="row mainContact-info between__xs">
 								<div class="col col__md-6 col__xs-12 relative" data-aos="fade-up">
-									<h2>Рекламным <br /> агентствам</h2><img src="assets/images/lime.svg" alt="" />
+									<h2>Рекламным <br /> агентствам</h2>
+									<div class="rellax"><img src="assets/images/lime.svg" alt="" />
+									</div>
 								</div>
 								<div class="col col__md-6 col__xs-12" data-aos="fade-up">
 									<p class="text__md">Если вам интересно развивать направление корпоративных подарков в вашем агентстве, оставьте заявку и мы вышлем условия сотрудничества.</p><a class="btn btn--outlined popup-modal popup-with-zoom-anim" href="#call"><span>Запросить условия сотрудничества</span></a>
