--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 			<div class="loader"><img src="assets/images/loader.gif" alt="" />
 			</div>
 			<div class="mfp-hide popup-block popup-block--sm zoom-anim-dialog" id="call">
-				<div class="close-popup popup-modal-dismiss"><img src="assets/images/icons/close-wh.svg" alt="" />
-				</div>
+				<div class="close-popup popup-modal-dismiss"></div>
 				<div class="activeForm">
 					<h4>Свяжемся в течении 5 минут</h4>
 					<p>Работаем с понедельника по пятницу с 9:00 до 18:45</p>
@@ -71,8 +70,8 @@
 							</div>
 						</div>
 						<button class="btn btn--outlined form__group btn--full sent--js" type="submit"><span>Оставить заявку на образец</span></button>
-						<div class="radio">
-							<input type="radio" id="sign1" name="sign" />
+						<div class="checkbox">
+							<input type="checkbox" id="sign1" />
 							<label class="label" for="sign1"><span>Согласен на обработку персональных данных в соответствии с <a href>политикой конфиденциальности</a></span></label>
 						</div>
 					</form>
@@ -84,8 +83,7 @@
 				</div>
 			</div>
 			<div class="mfp-hide popup-block popup-block--sm zoom-anim-dialog" id="card">
-				<div class="close-popup popup-modal-dismiss"><img src="assets/images/icons/close-wh.svg" alt="" />
-				</div>
+				<div class="close-popup popup-modal-dismiss"></div>
 				<h4>Рассчитать срок <br /> и оставить заявку на заказ</h4>
 				<form action="" method="POST">
 					<div class="kit">
@@ -185,15 +183,14 @@
 						</div>
 					</div>
 					<button class="btn btn--outlined form__group btn--full" type="submit"><span>Оставить заявку на образец</span></button>
-					<div class="radio">
-						<input type="radio" id="sign2" name="sign" />
+					<div class="checkbox">
+						<input type="checkbox" id="sign2" />
 						<label class="label" for="sign2"><span>Согласен на обработку персональных данных в соответствии с <a href>политикой конфиденциальности</a></span></label>
 					</div>
 				</form>
 			</div>
 			<div class="mfp-hide popup-block zoom-anim-dialog" id="product">
-				<div class="close-popup popup-modal-dismiss"><img src="assets/images/icons/close-wh.svg" alt="" />
-				</div>
+				<div class="close-popup popup-modal-dismiss"></div>
 				<div class="card">
 					<div class="card__left">
 						<div class="slick-prev slick-prev--ca"><img src="assets/images/icons/left-arrow.svg" alt="" />
@@ -234,13 +231,12 @@
 							<li>1 сорт чая / 1 унция в емкости</li>
 							<li>Тростниковый сахар / 100 гр.</li>
 							<li>Коробка «Классика»</li>
-						</ul><a class="btn btn--primary" href="#"><span>Оставить заявку на образец</span></a><a href="#">Перейти к карточке подарка<img src="assets/images/icons/next.svg" alt="" /></a>
+						</ul><a class="btn btn--primary" href="#"><span>Оставить заявку на образец</span></a><a href="card.html">Перейти к карточке подарка<img src="assets/images/icons/next.svg" alt="" /></a>
 					</div>
 				</div>
 			</div>
 			<div class="mfp-hide popup-block zoom-anim-dialog" id="keys">
-				<div class="close-popup popup-modal-dismiss"><img src="assets/images/icons/close-wh.svg" alt="" />
-				</div>
+				<div class="close-popup popup-modal-dismiss"></div>
 				<div class="card">
 					<div class="card__left">
 						<div class="slick-prev slick-prev--ca"><img src="assets/images/icons/left-arrow-wh.svg" alt="" />
@@ -291,8 +287,7 @@
 						<div class="float-container">
 							<input class="control" type="text" name="search" id="search" placeholder="Что вы хотите найти?" required="required" />
 							<label for="search">Что вы хотите найти?</label>
-						</div>
-						<button type="submit"><i class="icon-search"></i></button>
+						</div><a href="search.html"><i class="icon-search"></i></a>
 					</form>
 				</div>
 			</div>
@@ -300,11 +295,11 @@
 				<nav class="navbar col__xl-6 col__lg-5">
 					<div class="main-nav__collapse">
 						<ul class="header__menu anchor">
-							<li class="header__menu-el"><a class="header__menu__item" href="#products" title="Каталог подарков">Каталог подарков</a>
+							<li class="header__menu-el"><a class="header__menu__item" href="index.html#products" title="Каталог подарков">Каталог подарков</a>
 							</li>
-							<li class="header__menu-el"><a class="header__menu__item" href="#howto" title="Как формируется подарок">Как формируется подарок</a>
+							<li class="header__menu-el"><a class="header__menu__item" href="index.html#howto" title="Как формируется подарок">Как формируется подарок</a>
 							</li>
-							<li class="header__menu-el"><a class="header__menu__item" href="#contacts" title="Контакты">Контакты</a>
+							<li class="header__menu-el"><a class="header__menu__item" href="index.html#contacts" title="Контакты">Контакты</a>
 							</li>
 						</ul>
 						<div class="visible__sm visible__xs">
@@ -507,7 +502,7 @@
 							</div>
 						</div>
 					</section>
-					<section class="mainProduct" id="products">
+					<section class="mainProduct" id="products" data-aos="fade-up">
 						<h2 data-aos="fade-up">Наши подарки</h2>
 						<div class="tabs">
 							<div class="tabs-list"><a class="tab active" href="#stage1">8 марта</a><a class="tab" href="#stage2">23 февраля</a><a class="tab" href="#stage3">новый год</a>
@@ -546,7 +541,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="tabs-content show" id="stage1" data-aos="fade-up">
+							<div class="tabs-content show" id="stage1">
 								<div class="moreDetail--js">
 									<div class="row between__xs middle__xs">
 										<div class="sorting col"><span>Сортировать:</span>
@@ -561,7 +556,7 @@
 											<div class="filtering-el" data-count="all">Все</div>
 										</div>
 									</div>
-									<div class="products">
+									<div class="products" data-aos="fade-up">
 										<div class="products__item">
 											<div class="products__item-img"><img src="assets/images/prod-1.png" /></div>
 											<div class="products__item-title">Рождественская посылка</div>
@@ -659,7 +654,7 @@
 											<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 										</div>
 									</div>
-									<div class="showMore-body">
+									<div class="showMore-body" data-aos="fade-up">
 										<div class="showMore showMore--js">
 											<div class="textIcon"><i class="sprite--plus"></i><span>Показать еще</span></div>
 										</div>
@@ -671,7 +666,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="tabs-content" id="stage2" data-aos="fade-up">
+							<div class="tabs-content" id="stage2">
 								<div class="moreDetail--js">
 									<div class="row between__xs middle__xs">
 										<div class="sorting col"><span>Сортировать:</span>
@@ -686,7 +681,7 @@
 											<div class="filtering-el" data-count="all">Все</div>
 										</div>
 									</div>
-									<div class="products">
+									<div class="products" data-aos="fade-up">
 										<div class="products__item">
 											<div class="products__item-img"><img src="assets/images/prod-1.png" /></div>
 											<div class="products__item-title">Рождественская посылка</div>
@@ -738,7 +733,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="tabs-content" id="stage3" data-aos="fade-up">
+							<div class="tabs-content" id="stage3">
 								<div class="moreDetail--js">
 									<div class="row between__xs middle__xs">
 										<div class="sorting col"><span>Сортировать:</span>
@@ -753,7 +748,7 @@
 											<div class="filtering-el" data-count="all">Все</div>
 										</div>
 									</div>
-									<div class="products">
+									<div class="products" data-aos="fade-up">
 										<div class="products__item">
 											<div class="products__item-img"><img src="assets/images/prod-1.png" /></div>
 											<div class="products__item-title">Рождественская посылка</div>
@@ -915,8 +910,8 @@
 											</div>
 										</div>
 										<button class="form__group btn btn--full btn--outlined" href="#"><span>Оставить заявку на подбор</span></button>
-										<div class="radio">
-											<input type="radio" id="sign" name="sign" />
+										<div class="checkbox">
+											<input type="checkbox" id="sign" />
 											<label class="label" for="sign"><span>Согласен на обработку персональных данных в соответствии с <a href>политикой конфиденциальности</a></span></label>
 										</div>
 									</div>
@@ -1471,7 +1466,7 @@
 								<div class="mainHowToList__item-num">01</div>
 								<div class="mainHowToList__item-img"><img src="assets/images/howTo1.svg" alt="" />
 								</div>
-								<div class="mainHowToList__item-desc">Вы выбираете готовые подарки из <a href="#">каталога</a> или&nbsp;оставляете заявку на разработку индивидуального решения</div>
+								<div class="mainHowToList__item-desc">Вы выбираете готовые подарки из каталога или&nbsp;оставляете заявку на разработку индивидуального решения</div>
 							</div>
 							<div class="mainHowToList__item" data-aos="fade-up">
 								<div class="mainHowToList__item-num">02</div>
