--- a/search.html
+++ b/search.html
@@ -46,8 +46,7 @@
 			<div class="loader"><img src="assets/images/loader.gif" alt="" />
 			</div>
 			<div class="mfp-hide popup-block popup-block--sm zoom-anim-dialog" id="call">
-				<div class="close-popup popup-modal-dismiss"><img src="assets/images/icons/close-wh.svg" alt="" />
-				</div>
+				<div class="close-popup popup-modal-dismiss"></div>
 				<div class="activeForm">
 					<h4>Свяжемся в течении 5 минут</h4>
 					<p>Работаем с понедельника по пятницу с 9:00 до 18:45</p>
@@ -71,8 +70,8 @@
 							</div>
 						</div>
 						<button class="btn btn--outlined form__group btn--full sent--js" type="submit"><span>Оставить заявку на образец</span></button>
-						<div class="radio">
-							<input type="radio" id="sign1" name="sign" />
+						<div class="checkbox">
+							<input type="checkbox" id="sign1" />
 							<label class="label" for="sign1"><span>Согласен на обработку персональных данных в соответствии с <a href>политикой конфиденциальности</a></span></label>
 						</div>
 					</form>
@@ -84,8 +83,7 @@
 				</div>
 			</div>
 			<div class="mfp-hide popup-block popup-block--sm zoom-anim-dialog" id="card">
-				<div class="close-popup popup-modal-dismiss"><img src="assets/images/icons/close-wh.svg" alt="" />
-				</div>
+				<div class="close-popup popup-modal-dismiss"></div>
 				<h4>Рассчитать срок <br /> и оставить заявку на заказ</h4>
 				<form action="" method="POST">
 					<div class="kit">
@@ -185,15 +183,14 @@
 						</div>
 					</div>
 					<button class="btn btn--outlined form__group btn--full" type="submit"><span>Оставить заявку на образец</span></button>
-					<div class="radio">
-						<input type="radio" id="sign2" name="sign" />
+					<div class="checkbox">
+						<input type="checkbox" id="sign2" />
 						<label class="label" for="sign2"><span>Согласен на обработку персональных данных в соответствии с <a href>политикой конфиденциальности</a></span></label>
 					</div>
 				</form>
 			</div>
 			<div class="mfp-hide popup-block zoom-anim-dialog" id="product">
-				<div class="close-popup popup-modal-dismiss"><img src="assets/images/icons/close-wh.svg" alt="" />
-				</div>
+				<div class="close-popup popup-modal-dismiss"></div>
 				<div class="card">
 					<div class="card__left">
 						<div class="slick-prev slick-prev--ca"><img src="assets/images/icons/left-arrow.svg" alt="" />
@@ -234,13 +231,12 @@
 							<li>1 сорт чая / 1 унция в емкости</li>
 							<li>Тростниковый сахар / 100 гр.</li>
 							<li>Коробка «Классика»</li>
-						</ul><a class="btn btn--primary" href="#"><span>Оставить заявку на образец</span></a><a href="#">Перейти к карточке подарка<img src="assets/images/icons/next.svg" alt="" /></a>
+						</ul><a class="btn btn--primary" href="#"><span>Оставить заявку на образец</span></a><a href="card.html">Перейти к карточке подарка<img src="assets/images/icons/next.svg" alt="" /></a>
 					</div>
 				</div>
 			</div>
 			<div class="mfp-hide popup-block zoom-anim-dialog" id="keys">
-				<div class="close-popup popup-modal-dismiss"><img src="assets/images/icons/close-wh.svg" alt="" />
-				</div>
+				<div class="close-popup popup-modal-dismiss"></div>
 				<div class="card">
 					<div class="card__left">
 						<div class="slick-prev slick-prev--ca"><img src="assets/images/icons/left-arrow-wh.svg" alt="" />
@@ -291,8 +287,7 @@
 						<div class="float-container">
 							<input class="control" type="text" name="search" id="search" placeholder="Что вы хотите найти?" required="required" />
 							<label for="search">Что вы хотите найти?</label>
-						</div>
-						<button type="submit"><i class="icon-search"></i></button>
+						</div><a href="search.html"><i class="icon-search"></i></a>
 					</form>
 				</div>
 			</div>
@@ -300,11 +295,11 @@
 				<nav class="navbar col__xl-6 col__lg-5">
 					<div class="main-nav__collapse">
 						<ul class="header__menu anchor">
-							<li class="header__menu-el"><a class="header__menu__item" href="#products" title="Каталог подарков">Каталог подарков</a>
+							<li class="header__menu-el"><a class="header__menu__item" href="index.html#products" title="Каталог подарков">Каталог подарков</a>
 							</li>
-							<li class="header__menu-el"><a class="header__menu__item" href="#howto" title="Как формируется подарок">Как формируется подарок</a>
+							<li class="header__menu-el"><a class="header__menu__item" href="index.html#howto" title="Как формируется подарок">Как формируется подарок</a>
 							</li>
-							<li class="header__menu-el"><a class="header__menu__item" href="#contacts" title="Контакты">Контакты</a>
+							<li class="header__menu-el"><a class="header__menu__item" href="index.html#contacts" title="Контакты">Контакты</a>
 							</li>
 						</ul>
 						<div class="visible__sm visible__xs">
@@ -324,7 +319,6 @@
 			</header>
 			<main class="page index">
 				<section class="search">
-					<div class="linkInner"><a class="textIcon" href="https://www.chay.info/" target="_blank"><img src="assets/images/icons/prev.svg" alt="" /><span class="text__sm">На основной сайт</span></a></div>
 					<div class="container">
 						<h3 data-aos="fade-up">Результаты поиска</h3>
 						<p data-aos="fade-up">По запросу «подарочный чайный набор» найдено <b>35 подарков</b></p>
