--- a/index.html
+++ b/index.html
@@ -1575,7 +1575,7 @@
 				</section>
 			</main>
 			<footer class="footer" data-aos="fade-up">
-				<div class="container"><a class="footer__logo" href="/"><img src="assets/images/logo.svg" alt="" /></a>
+				<div class="container"><a class="footer__logo" href="/"><img src="assets/images/logoBot.svg" alt="" /></a>
 					<div class="footer__copy">© 2019 Унция. Все права защищены.</div>
 					<ul class="footer__social">
 						<li><a href="#"><i class="icon-vk"></i></a></li>
