--- a/search.html
+++ b/search.html
@@ -92,13 +92,13 @@
 							<h5>Внимательность</h5>
 						</div>
 						<div class="kit__item">
-							<p class="text__lg">670 ₽</p>
+							<p class="text__lg">670 <span class="ruble-symbol"></span></p>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col col__md-6 col__xs-12 form__group">
 							<p>Мой бюджет</p>
-							<input class="controlMain" type="text" value="10 000 ₽" />
+							<input class="controlMain" type="text" value="10 000 руб." />
 						</div>
 						<div class="col col__md-6 col__xs-12 form__group">
 							<p>Мне нужно подарков</p>
@@ -123,40 +123,40 @@
 							<label for="logo22">с логотипом</label>
 						</div>
 					</div><br />
-					<p class="text__sm">Минимальный бюджет 10 000 ₽</p>
+					<p class="text__sm">Минимальный бюджет 10 000 <span class="ruble-symbol"></span></p>
 					<div class="summ">
 						<div class="summ__item">
-							<p>Итого без скидки, ₽</p>
+							<p>Итого без скидки, <span class="ruble-symbol"></span></p>
 							<div class="summCount">54 450</div>
 						</div>
 						<div class="summ__item">
-							<p>Итого со скидкой, ₽</p>
+							<p>Итого со скидкой, <span class="ruble-symbol"></span></p>
 							<div class="summCountMain">47 916</div>
 						</div>
 						<div class="summ__item tooltipMain">
 							<p>Скидка <a class="text__sm tooltip tooltip--js" href="#">От чего зависит?</a></p>
 							<div class="tooltipBody">
 								<div class="summ__item">
-									<p>10 0000 ₽ – 50 0000 ₽</p>
+									<p>10 0000 <span class="ruble-symbol"></span> – 50 0000 <span class="ruble-symbol"></span></p>
 									<div class="summCount">10%</div>
 								</div>
 								<div class="summ__item">
-									<p>50 0000 ₽ – 100 0000 ₽</p>
+									<p>50 0000 <span class="ruble-symbol"></span> – 100 0000 <span class="ruble-symbol"></span></p>
 									<div class="summCount">12%</div>
 								</div>
 								<div class="summ__item">
-									<p>100 0000 ₽ – 250 0000 ₽</p>
+									<p>100 0000 <span class="ruble-symbol"></span> – 250 0000 <span class="ruble-symbol"></span></p>
 									<div class="summCount">15%</div>
 								</div>
 								<div class="summ__item">
-									<p>250 0000 ₽ и более</p>
-									<div class="summCount">25%</div>
+									<p>250 0000 <span class="ruble-symbol"></span> и более</p>
+									<div class="summCount">20%</div>
 								</div>
 							</div>
 							<div class="summCount">12%</div>
 						</div>
 						<div class="summ__item">
-							<p>Сумма скидки, ₽</p>
+							<p>Сумма скидки, <span class="ruble-symbol"></span></p>
 							<div class="summCount">6 534</div>
 						</div>
 						<div class="summ__item">
@@ -222,7 +222,7 @@
 						<div>
 							<p class="text--grey">Подарочный набор</p>
 							<h3>Внимательность</h3>
-							<div class="card-price">670 ₽</div>
+							<div class="card-price">670 <span class="ruble-symbol"></span></div>
 						</div>
 						<h4>Состав набора</h4>
 						<ul class="list--bullet">
@@ -334,97 +334,97 @@
 								<div class="products__item">
 									<div class="products__item-img"><img src="assets/images/prod-1.png" /></div>
 									<div class="products__item-title">Рождественская посылка</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol ruble-symbol--brown"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item">
 									<div class="products__item-img"><img src="assets/images/prod-2.png" /></div>
 									<div class="products__item-title">Вечер на льду</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol ruble-symbol--brown"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item">
 									<div class="products__item-img"><img src="assets/images/prod-3.png" /></div>
 									<div class="products__item-title">Посылка камин</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol ruble-symbol--brown"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item">
 									<div class="products__item-img"><img src="assets/images/prod-4.png" /></div>
 									<div class="products__item-title">Встреча</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol ruble-symbol--brown"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item">
 									<div class="products__item-img"><img src="assets/images/prod-5.png" /></div>
 									<div class="products__item-title">Золотой узор</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol ruble-symbol--brown"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item">
 									<div class="products__item-img"><img src="assets/images/prod-6.png" /></div>
 									<div class="products__item-title">Зимняя сказка</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol ruble-symbol--brown"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item">
 									<div class="products__item-img"><img src="assets/images/prod-7.png" /></div>
 									<div class="products__item-title">Внимательность</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol ruble-symbol--brown"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item">
 									<div class="products__item-img"><img src="assets/images/prod-8.png" /></div>
 									<div class="products__item-title">Биг-Бен</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol ruble-symbol--brown"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item hideBlock">
 									<div class="products__item-img"><img src="assets/images/prod-1.png" /></div>
 									<div class="products__item-title">Рождественская посылка</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item hideBlock">
 									<div class="products__item-img"><img src="assets/images/prod-2.png" /></div>
 									<div class="products__item-title">Вечер на льду</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item hideBlock">
 									<div class="products__item-img"><img src="assets/images/prod-3.png" /></div>
 									<div class="products__item-title">Посылка камин</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item hideBlock">
 									<div class="products__item-img"><img src="assets/images/prod-4.png" /></div>
 									<div class="products__item-title">Встреча</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item hideBlock">
 									<div class="products__item-img"><img src="assets/images/prod-5.png" /></div>
 									<div class="products__item-title">Золотой узор</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item hideBlock">
 									<div class="products__item-img"><img src="assets/images/prod-6.png" /></div>
 									<div class="products__item-title">Зимняя сказка</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item hideBlock">
 									<div class="products__item-img"><img src="assets/images/prod-7.png" /></div>
 									<div class="products__item-title">Внимательность</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 								<div class="products__item hideBlock">
 									<div class="products__item-img"><img src="assets/images/prod-8.png" /></div>
 									<div class="products__item-title">Биг-Бен</div>
-									<div class="products__item-price">670 ₽</div>
+									<div class="products__item-price">670 <span class="ruble-symbol"></span></div>
 									<div class="products__item-footer"><a class="btn btn__sm btn--outlined popup-modal popup-with-zoom-anim" href="#card"><span>Заказать подарок</span></a><a class="popup-modal popup-with-zoom-anim" href="#product">Что внутри?</a></div>
 								</div>
 							</div>
