--- a/search.html
+++ b/search.html
@@ -98,7 +98,10 @@
 					<div class="row">
 						<div class="col col__md-6 col__xs-12 form__group">
 							<p>Мой бюджет</p>
-							<input class="controlMain" type="text" value="10 000 руб." />
+							<div class="controlMain-wrapper">
+								<input class="controlMain" type="text" value="10 000" />
+								<span class="ruble-symbol"></span>
+							</div>
 						</div>
 						<div class="col col__md-6 col__xs-12 form__group">
 							<p>Мне нужно подарков</p>
